# Compiler

./: CMakeLists.txt  README.md  lLexer.c  lUtils.c  main.c
include/: lLexer.h  lToken.h  lUtils.h
scratch/: scratch  scratch.c
